@@ -2,7 +2,7 @@
   <div class="kel kexpand">
     <span class="kname">Called from</span>
   </div>
-  <div class="knest khidden">
+  <div class="knest">
     <ul class="knode">
       <li class="kchild">
         <div class="kel">
