@@ -27,6 +27,9 @@
 - Change: Use compressed css for the SmokyGrey skin.
 - Change: Refactored the code generation.
 - Change: Refactored the routing.
+- Change: "Called from" is always expanded in the smokygrey skin.
+- Change: The connector constants are now strings.
+- Bugfix: The search does now respects the selected tab.
 
 3.2.4
 - Bugfix: Analysing of __PHP_Incomplete_Class does not throw
